# openclaw-sandbox-blueprint

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  SPEC.md  foundry.toml  package.json  remappings.txt
.github/workflows/: ci.yml  real-variant-runtime.yml
claw-runtime-access-control/: Cargo.toml
claw-runtime-access-control/src/: lib.rs
config/templates/custom/: SOUL.md  TOOLS.md  USER.md  template.json
config/templates/discord/: SOUL.md  TOOLS.md  USER.md  template.json
config/templates/ops/: SOUL.md  TOOLS.md  USER.md  template.json
config/templates/telegram/: SOUL.md  TOOLS.md  USER.md  template.json
contracts/script/: RegisterBlueprint.s.sol
control-plane-ui/: app.js  index.html  styles.css
control-plane-ui/assets/: ccip-DZrfWNPL.js  terminal-DfGRPfEY.js
docs/: ARCHITECTURE.md  MIGRATION.md  UI_INTEGRATION_SPEC.md  VARIANT-REFERENCE.md
openclaw-hosting-blueprint-bin/: Cargo.toml
openclaw-hosting-blueprint-bin/src/: main.rs
openclaw-hosting-blueprint-lib/: Cargo.toml
openclaw-hosting-blueprint-lib/src/: error.rs  lib.rs  state.rs
openclaw-hosting-blueprint-lib/src/config/: templateLoader.js
openclaw-hosting-blueprint-lib/src/jobs/: inMemoryJobRunner.js  lifecycle.rs  lifecycleJobs.js
openclaw-hosting-blueprint-lib/src/runtime/: mockSandboxRuntimeAdapter.js  sandboxRuntimeContracts.js
openclaw-hosting-blueprint-lib/src/server/: bootstrap.js  createHttpService.js
openclaw-hosting-blueprint-lib/src/services/: hostedInstanceService.js
openclaw-hosting-blueprint-lib/tests/: lifecycle.rs
openclaw-instance-blueprint-bin/: Cargo.toml
openclaw-instance-blueprint-bin/src/: main.rs
openclaw-instance-blueprint-lib/: Cargo.toml
openclaw-instance-blueprint-lib/src/: auth.rs  ingress_access.rs  lib.rs  operator_api.rs  query.rs  runtime_adapter.rs  state.rs
openclaw-instance-blueprint-lib/src/jobs/: lifecycle.rs
openclaw-instance-blueprint-lib/tests/: lifecycle.rs  operator_api_e2e.rs  real_variant_runtime.rs
openclaw-sandbox-blueprint-bin/: Cargo.toml
openclaw-sandbox-blueprint-bin/src/: main.rs
openclaw-sandbox-blueprint-lib/: Cargo.toml
openclaw-sandbox-blueprint-lib/src/: error.rs  lib.rs  query.rs  runtime_adapter.rs  state.rs
openclaw-sandbox-blueprint-lib/tests/: lifecycle.rs  operator_api_e2e.rs  real_variant_runtime.rs
openclaw-tee-instance-blueprint-bin/: Cargo.toml
openclaw-tee-instance-blueprint-bin/src/: main.rs
openclaw-tee-instance-blueprint-lib/: Cargo.toml
openclaw-tee-instance-blueprint-lib/src/: lib.rs
openclaw-tee-sandbox-blueprint-bin/: Cargo.toml
openclaw-tee-sandbox-blueprint-bin/src/: main.rs
openclaw-tee-sandbox-blueprint-lib/: Cargo.toml
openclaw-tee-sandbox-blueprint-lib/src/: lib.rs
scripts/: deploy-local.sh
scripts/ci/: run-docker-integration-tests.sh  run-real-variant-runtime-tests.sh
scripts/dev/: ui-demo-server.js
ui/: README.md  index.html  package.json  pnpm-lock.yaml  tsconfig.app.json  uno.config.ts  vite.config.ts
ui/scripts/: embed-control-plane-ui.mjs
ui/src/: App.tsx  globals.d.ts  main.tsx  polyfills.ts
ui/src/lib/: api.ts
ui/src/lib/contracts/: chains.ts
ui/src/providers/: Web3Provider.tsx
ui/src/styles/: global.scss  variables.scss
