[workspace]
resolver = "3"
members = [
    "claw-runtime-access-control",
    "openclaw-instance-blueprint-lib",
    "openclaw-instance-blueprint-bin",
    "openclaw-tee-instance-blueprint-lib",
    "openclaw-tee-instance-blueprint-bin",
]

[workspace.package]
authors = ["Drew Stone"]
edition = "2024"
description = "OpenClaw Instance Blueprint for Tangle Network"
license = "MIT OR Apache-2.0"

# Reduce debug build sizes (~60-70% smaller binaries)
[profile.dev]
split-debuginfo = "unpacked"

[profile.dev.package."*"]
debug = 1

# Use local blueprint SDK checkout for development/testing.
# Remove this section before publishing or when the upstream crates are published.
[patch."https://github.com/tangle-network/blueprint.git"]
blueprint-sdk = { path = "../blueprint/crates/sdk" }
blueprint-producers-extra = { path = "../blueprint/crates/producers-extra" }
