[package]
name = "openclaw-sandbox-blueprint-bin"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true

[[bin]]
name = "openclaw-sandbox-blueprint"
path = "src/main.rs"

[dependencies]
openclaw-sandbox-blueprint-lib = { path = "../openclaw-sandbox-blueprint-lib" }
blueprint-sdk = { git = "https://github.com/tangle-network/blueprint.git", branch = "main", default-features = false, features = ["std", "tangle"] }
blueprint-producers-extra = { git = "https://github.com/tangle-network/blueprint.git", branch = "main", features = ["cron"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
