[package]
name = "openclaw-tee-sandbox-blueprint-lib"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
description = "OpenClaw TEE Sandbox Blueprint library"
license.workspace = true

[dependencies]
openclaw-sandbox-blueprint-lib = { path = "../openclaw-sandbox-blueprint-lib" }
blueprint-sdk = { git = "https://github.com/tangle-network/blueprint.git", branch = "main", default-features = false, features = ["std", "tangle", "tracing", "macros"] }
